--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,82 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,400;0,500;0,700;1,400;1,700&family=Rubik:wght@400;500;600;700;800&display=swap'); 
+
+
+/* 
+font-family: 'DM Sans', sans-serif;
+font-family: 'Rubik', sans-serif; */
+*
+{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+:root
+{
+    --linearBgTwo:#05445E;
+    --linearBgOne:#022534;
+    /* padding */
+    --pagePadding:12.5rem;
+    /* text color */
+    --grayText :#818181;
+    --blackText: #000000;
+    --whiteText:#FFFFFF;
+
+    /* rectangular boxes */
+    --grayBg:#D9D9D9;
+    --gradientBorder: #CFF1FF, #2D5666;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+
+/* Be better at DSA & CP */
+.boldMainTexts
+{
+    font-size: 4.5rem;
+  font-family: 'Rubik', sans-serif;
+  font-weight:800;
+}
+/* Invest in skills,
+earn 10X of what you paid. */
+.boldMediumTexts
+{
+    font-size: 4rem;
+    font-weight: 800;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+/* 1999 */
+.lowBoldMediumtexts
+{
+    font-size: 3.5rem;
+    font-family: 'Rubik', sans-serif;
+    font-weight: 700;
+
 }
 
-.App-link {
-  color: #61dafb;
+/* 1.2Cr/Year */
+
+.boldSmallText
+{
+    font-size: 2rem;
+    font-family: 'DM Sans', sans-serif;
+}
+/* highest fresher package */
+.regularMediumTexts
+{
+    font-size: 1.5rem;
+    font-family: 'DM Sans', sans-serif;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+/* join now */
+.miniTexts  
+{
+    font-family: 'DM Sans', sans-serif;
+    font-size:1.375rem;
 }
+.gradientTexts
+{
+    background: -webkit-linear-gradient(var(--linearBgOne), var(--linearBgTwo));
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
+
