--- a/src/App.css
+++ b/src/App.css
@@ -94,7 +94,56 @@ button
     padding: 0.65rem 1.25rem;
 }
 
+/* responsive */
+
 
 @media screen and (max-width:426px) {
-    
+    :root 
+    {
+        --pagePadding:1rem;
+    }
+    /* Be better at DSA & CP */
+.boldMainTexts
+{
+    font-size: 2rem;
+
+}
+/* Invest in skills,
+earn 10X of what you paid. */
+.boldMediumTexts
+{
+    font-size: 2rem;
+    font-weight: 800;
+  font-family: 'Rubik', sans-serif;
+}
+
+/* 1999 */
+.lowBoldMediumtexts
+{
+    font-size: 1.5rem;
+    font-family: 'Rubik', sans-serif;
+    font-weight: 700;
+
+}
+
+/* 1.2Cr/Year */
+
+.boldSmallText
+{
+    font-size: 0.875rem;
+    font-family: 'DM Sans', sans-serif;
+    font-weight: bold;
+}
+/* highest fresher package */
+.regularMediumTexts
+{
+    font-size:0.75rem;
+    font-family: 'DM Sans', sans-serif;
+}
+
+/* join now */
+.miniTexts  
+{
+    font-size:0.75rem;
+}
 }
