--- a/src/css/PricingPage.css
+++ b/src/css/PricingPage.css
@@ -41,6 +41,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    
 }
 
 .checkBoxDivs .check 
@@ -55,7 +56,8 @@
 .pricingRightContent
 {
     background:linear-gradient(var(--linearBgOne), var(--linearBgTwo));
-    box-shadow: 0px 0px 20px 0.25px black;
+    box-shadow: 0px 0px 20px 0.25px rgb(205, 205, 205);
+    border-radius: 0.5rem;
 }
 
 .cardTop
@@ -105,9 +107,8 @@
 }
 .cardBottom .regularMediumTexts
 {
-    white-space: normal;
-     word-break:break-all;
-     word-wrap: break-word;
+
+    flex-basis: 100%;
 
 }
 
@@ -121,4 +122,93 @@
 {
     width: 100%;
     border-radius: 0.5rem;
+}
+
+@media screen  and (min-width:431px) and  (max-width:769px) {
+    .pricingContainer 
+    {
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        justify-content: center;
+    }
+    .checkBoxDivs .check
+{
+    width: 45px;
+    height: 45px;
+}
+    .pricingRightContent
+    {
+        margin-top: 4rem;
+        width: 380px;
+    }
+    .cardBottom
+    {
+        padding: 1rem 2rem;
+    }
+    .cardBottom .itemDiv
+{
+    margin: 0.85rem 0;
+
+
+
+}
+.cardBottom .check
+{
+    width: 30px;
+    height: 30px;
+}
+    
+}
+
+@media screen  and (max-width:431px) {
+    .pricingContainer 
+    {
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        justify-content: center;
+    }
+
+    .details .regularMediumTexts
+{
+    padding: 2rem 0;
+    line-height: 1.5;
+}
+    .checkBoxDivs .check
+{
+    width: 40px;
+    height: 40px;
+
+}
+.checkBoxDivs .itemDiv .itemDetail
+{
+        flex-basis: 100%;
+}
+    .pricingRightContent
+    {
+        margin-top: 4rem;
+        width: 380px;
+    }
+    .cardBottom
+    {
+        padding: 1rem 2rem;
+    }
+    .cardBottom .itemDiv
+{
+    margin: 0.85rem 0;
+
+
+
+}
+.cardBottom .check
+{
+    width: 30px;
+    height: 30px;
+}
+.cardBottom .cardBtn button 
+{
+    border-radius: 0.25rem;
+}
+    
 }
