--- a/src/css/About.css
+++ b/src/css/About.css
@@ -3,7 +3,7 @@
   width: 100vw;
   display: flex;
   align-items: center;
-  justify-content: start;
+  justify-content: flex-start;
   padding: var(--pagePadding);
   background: url(/public/assets/mainImg.png),
     linear-gradient(var(--linearBgOne), var(--linearBgTwo));
